--- a/create.html
+++ b/create.html
@@ -5,20 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title>Create Post</title>
 </head>
 
-<body>
+<body class="container">
     <h1>Create Post</h1>
-    <form action="process-post.php" method="POST">
-        <label for="title">Title:</label>
-        <input id="title" name="title" type="text">
-        <br>
-        <label for="content">Content:</label>
-        <br>
-        <textarea name="content" id="content" cols="30" rows="10" placeholder="text goes here"></textarea>
-        <br>
-        <input type="submit" value="send">
+    <form action="process-post.php"  method="POST">
+        <div class="form-group">
+            <label for="title">Title:</label>
+            <input id="title" class="form-control" name="title" type="text">
+        </div>
+        <div class="form-group">
+            <label for="content">Content:</label>
+            <textarea name="content" class="form-control" id="content" rows="10" placeholder="Type here!"></textarea>
+        </div>
+        <input type="submit" class="btn btn-default" value="Submit">
     </form>
 </body>
 
