--- a/create.html
+++ b/create.html
@@ -5,21 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title>Create Post</title>
 </head>
 
 <body>
-    <h1>Create Post</h1>
-    <form action="process-post.php" method="POST">
-        <label for="title">Title:</label>
-        <input id="title" name="title" type="text">
-        <br>
-        <label for="content">Content:</label>
-        <br>
-        <textarea name="content" id="content" cols="30" rows="10" placeholder="text goes here"></textarea>
-        <br>
-        <input type="submit" value="send">
-    </form>
+    <div class="container-fluid">
+        <div class="row">
+            <h1 class="col-sm-4 col-sm-offset-4">Create Post</h1>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <form class="col-sm-4 col-sm-offset-4" action="process-post.php" method="POST">
+            <div class=" form-group">
+                <label for="title">Title:</label>
+                <input class="form-control" id="title" name="title" type="text">
+            </div>
+            <div class=" form-group">
+                <label for="content">Content:</label>
+                <textarea class="form-control" name="content" id="content" cols="30" rows="10" placeholder="text goes here"></textarea>
+            </div>
+            <input type="submit" value="Send" class="btn btn-default">
+        </form>
+    </div>
 </body>
 
 </html>
